# nanocode

./: .env.example  .gitignore  README.md  nanocode.py  pyproject.toml
.githooks/: pre-commit
agents/: architect.md  coder.md  debugger.md  refactor.md  reviewer.md  tester.md
docs/ideas/: skills-unification.md
nanocode/: __init__.py  __main__.py  cli.py  system.md
nanocode/cli/: __init__.py  api.py  catalog.py  config.py  frontmatter.py  session.py  skill_loader.py  tools.py  types.py  ui.py
nanocode/permission/: __init__.py  fs_wrapper.py  manager.py  path_validator.py  permission_prompt.py  permission_store.py
nanocode/skills/: agent-skills.md
nanocode/skills/plugin-eval/tests/: test_models.py  test_parser.py
scripts/: scan-secrets.py
skills/: architect.md  coder.md  debugger.md  refactor.md  reviewer.md  tester.md
