[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["nanocode"]

[project]
name = "nanocode-go"
version = "1.0.0"
description = "Minimal coding agent using the OpenCode Go API — zero dependencies, ~500 lines."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
authors = [{ name = "nanocode contributors" }]
keywords = ["coding-agent", "ai", "opencode", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Build Tools",
]

[tool.setuptools.package-data]
nanocode = ["system.md", "skills/**/*.md"]

[project.scripts]
nanocode = "nanocode.cli:main"
nanocode-go = "nanocode.cli:main"


